--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./hotstar-icon.ico">
+    <link rel="icon" href="./assets/hotstar-icon.ico">
     <link rel="stylesheet" href="./style.css">
     <title>Disney + Hotstar (Prakash TM)</title>
 </head>
@@ -270,7 +270,7 @@
                          <img class="item-img" src="./assets/content-img-7.webp" alt="Anime">
                      </li>
                      <li>
-                         <img class="item-img" src="./content-img-6.webp" alt="Anime">
+                         <img class="item-img" src="./assets/content-img-6.webp" alt="Anime">
                      </li>
                      <li>
                          <img class="item-img" src="./assets/content-img-5.webp" alt="Anime">
