--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                  </ul>
                 </div>
                  <div class="footer-description">
-                 <p>© 2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are service marks of, and all related programming visuals and elements are the property of, Home Box Office, Inc. All rights reserved.</p>
+                 <p style="width: 637px;">© 2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are service marks of, and all related programming visuals and elements are the property of, Home Box Office, Inc. All rights reserved.</p>
                 </div>
             </div>
             <div>
@@ -346,30 +346,6 @@
          </div>
 
             
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
